--- a/index.html
+++ b/index.html
@@ -7,19 +7,31 @@
         <link rel="icon" type="image/png" href="assets/favicon.ico"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
+
     <body>
-        <!-- Profile picture-->
+        <!-- Profile picture -->
         <img src="/com-head.jpeg" alt="profile picture" class="profile-picture">
-            <!-- Profile name-->
+            <!-- Profile name -->
         <h1 class="profile name">@mr.panitarn</a></h1>
-        <!-- Profile motto-->
-        <h2 class="profile motto">Hello world!</h2>
-        <!-- Links and Headers-->
-        
-        <a href="https://www.facebook.com/pondpanitarn/" target="_blank" ><i class="fa fa-facebook fa_custom fa-4x"></i></a>
-        <a href="https://www.instagram.com/mr.panitarn/" target="_blank" ><i class="fa fa-instagram fa_custom fa-4x"></i></a>
-        <a href="https://github.com/panitarn" target="_blank" ><i class="fa fa-github fa_custom fa-4x"></i></a>
-        <a href="https://www.linkedin.com/in/panitarn/" target="_blank" ><i class="fa fa-linkedin fa_custom fa-4x"></i></a>
+        <div>
+            <h2 class="profile motto"><span class="auto-type"></span></h2>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script>
+            var typed = new Typed(".auto-type", {
+                strings: ["Hello World!"],
+                typeSpeed: 150,
+                backSpeed: 150,
+                loop: true
+            })
+        </script>
+
+        <!-- Links -->
+        <a href="https://www.facebook.com/pondpanitarn/" target="_blank"><i class="fa fa-facebook fa_custom fa-4x"></i></a>
+        <a href="https://www.instagram.com/mr.panitarn/" target="_blank"><i class="fa fa-instagram fa_custom fa-4x"></i></a>
+        <a href="https://github.com/panitarn" target="_blank"><i class="fa fa-github fa_custom fa-4x"></i></a>
+        <a href="https://www.linkedin.com/in/panitarn/" target="_blank"><i class="fa fa-linkedin fa_custom fa-4x"></i></a>
     </body>
 
     <div class="footer">
